force-app/main/default/objects/FeedbackQuestion__c/FeedbackQuestion__c.object-meta.xml
<CustomObject>
    <label>Feedback Question</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>