force-app/main/default/objects/FeedbackQuestion__c/fields/EntityType__c.field-meta.xml
<CustomField>
    <fullName>EntityType__c</fullName>
    <inlineHelpText>Select an Entity Type for NER Question Types</inlineHelpText>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DATETIME</fullName>
            </value>
            <value>
                <fullName>DURATION</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
            </value>
            <value>
                <fullName>LOCATION</fullName>
            </value>
            <value>
                <fullName>MONEY</fullName>
            </value>
            <value>
                <fullName>NUMBER</fullName>
            </value>
            <value>
                <fullName>ORGANIZATION</fullName>
            </value>
            <value>
                <fullName>PERCENT</fullName>
            </value>
            <value>
                <fullName>PERSON</fullName>
            </value>
            <value>
                <fullName>PHONE-NUMBER</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>