force-app/main/default/objects/FeedbackQuestion__c/fields/ExtractionType__c.field-meta.xml
<CustomField>
    <fullName>ExtractionType__c</fullName>
    <inlineHelpText>Select an extraction type for a keyword match Question Type</inlineHelpText>
    <label>Extraction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>RegEx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>