force-app/main/default/objects/FeedbackQuestion__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <referenceTo>Feedback__c</referenceTo>
    <relationshipLabel>Feedback Questions</relationshipLabel>
    <relationshipName>Feedback_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>