force-app/main/default/objects/FeedbackQuestion__c/fields/Intent_developer_name__c.field-meta.xml
<CustomField>
    <fullName>Intent_developer_name__c</fullName>
    <label>Intent Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>