force-app/main/default/objects/FeedbackQuestion__c/fields/Match_Phrase__c.field-meta.xml
<CustomField>
    <fullName>Match_Phrase__c</fullName>
    <inlineHelpText>This contains the keyword literal, Pipe &quot;|&quot; separated list of literals, or RegEx pattern for the Keyword Match Question type</inlineHelpText>
    <label>Match Phrase</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>