force-app/main/default/objects/FeedbackQuestion__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <inlineHelpText>Who needs to speak the utterance for matching?</inlineHelpText>
    <label>Speaker</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Agent or Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>