force-app/main/default/objects/FeedbackQuestion__c/recordTypes/Intent.recordType-meta.xml
<RecordType>
    <fullName>Intent</fullName>
    <active>true</active>
    <description>Matches a customer/agent utterance to an intent defined in an intent set.</description>
    <label>Intent Match</label>
</RecordType>