force-app/main/default/objects/FeedbackQuestion__c/recordTypes/Keyword.recordType-meta.xml
<RecordType>
    <fullName>Keyword</fullName>
    <active>true</active>
    <description>Matches a customer/agent utterance to a defined static or dynamic keyword/phrase</description>
    <label>Keyword Match</label>
</RecordType>