force-app/main/default/objects/FeedbackQuestion__c/recordTypes/NER.recordType-meta.xml
<RecordType>
    <fullName>NER</fullName>
    <active>true</active>
    <description>Extract named entities from unstructured text to save to variables.</description>
    <label>NER Match</label>
</RecordType>